# rusty_turing_machine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  default.nix  shell.nix
examples/: tmBB2.toml  tmBB3.toml  tmBB4.toml  tmBB5.toml
src/: main.rs  turing_machine.rs
