[package]
name = "rusty-turing-machine"
version = "0.1.0"
authors = ["functional-tim <tim.gravert@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "^1.1"
indexmap = { version = "^1.8", features = ["serde-1"] }
serde = "^1.0"
serde_derive = "^1.0"
structopt = "^0.3"
toml = "^0.5"
